0x07-python-test_driven_development/tests/0-add_integer.txt
The ``0-add_integer`` module
============================
This module contains only one function: add_integer.

Using ``add_integer``
---------------------

First import
~~~~~~~~~~~~
First import ``add_integer`` from the ``0-add_integer`` module. Since the file name contains a numeral, you can't use the simple ``from 0-add_integer import add_integer``. You can instead use the following syntax:

    >>> add_integer = __import__('0-add_integer').add_integer

Normal use
~~~~~~~~~~
Now, you can use `add_integer` to compute the sum of two integers:

    >>> add_integer(2, 3)
    5

    >>> add_integer(-10, 5)
    -5

Note that the function can handle floating-point values as well, but they will be cast to integers (rounded down):

    >>> add_integer(2.5, 3)
    5

    >>> add_integer(8.6, 4.7)
    12

    >>> add_integer(2.5, -3)
    -1

Also, the second argument defaults to 98, so providing only one argument adds it to 98:

    >>> add_integer(5)
    103

    >>> add_integer(2.5)
    100

Exceptions
~~~~~~~~~~
If `a` and `b` are any type other than int or float, the function will raise a TypeError exception with the message ``a must be an integer`` or ``b must be an integer.``

    >>> add_integer('5')
    Traceback (most recent call last):
        ...
    TypeError: a must be an integer or b must be an integer

    >>> add_integer(3, [5])
    Traceback (most recent call last):
        ...
    TypeError: a must be an integer or b must be an integer

    >>> add_integer((3, 5))
    Traceback (most recent call last):
        ...
    TypeError: a must be an integer or b must be an integer

Handling limits to floats:

    >>> pos_inf = float('inf')  # positive infinity
    >>> add_integer(pos_inf, 4.0)
    Traceback (most recent call last):
        ...
    OverflowError: cannot convert float infinity to integer

    >>> neg_inf = float('-inf')  # negative infinity
    >>> add_integer(neg_inf, 4.0)
    Traceback (most recent call last):
        ...
    OverflowError: cannot convert float infinity to integer

    >>> not_a_num = float('nan')   # NaN ("not a number")
    >>> add_integer(not_a_num, 4.0)
    Traceback (most recent call last):
        ...
    ValueError: cannot convert float NaN to integer

Ensure one or two arguments are provided, otherwise an exception will occur:

    >>> add_integer()
    Traceback (most recent call last):
        ...
    TypeError: add_integer() missing 1 required positional argument: 'a'

    >>> add_integer(1, 2, 3)
    Traceback (most recent call last):
        ...
    TypeError: add_integer() takes from 1 to 2 positional arguments but 3 were given
